# ProjectX

./: .config.txt.swp  .gdb_history  .gitignore  .gitlab-ci.yml  Makefile  PhaseII_Scoring_Maintenance.docx  README.md  changelog.md  config.ini  config.sample  config.txt  config_large.ini  config_small.ini  config_test.ini  gmon.out  gprofresults.txt  platform.pform  platform.prof  runCodeCheck.sh  runCoverage.sh  run_1v1_game.sh  temp_2.txt
src/: .ProjectileActor.cpp.swp  .gitlab-ci.yml  Actor-Alternate.cpp  Actor-Alternate.h  Actor.cpp  Actor.h  ActorInfo.cpp  ActorInfo.h  AllHeader.h  AsciiGameMisc.cpp  AsciiGameMisc.h  AsciiTankActor.cpp  AsciiTankActor.h  AsciiTankActor_Dynamic.cpp  AttackData.cpp  AttackData.h  AttackDownAI.cpp  AttackDownAI.h  CMakeLists.txt  CamperAI.cpp  CamperAI.h  Crate.cpp  Doxyfile  Drawable.h  DynamicAsciiGame.cpp  DynamicAsciiGame.h  DynamicLoader.cpp  DynamicLoader.h  GameField.cpp  GameField.h  GameFieldDrawable.cpp  Makefile  MapData.cpp  MapData.h  Menu.cpp  Menu.h  MoveData.cpp  MoveData.h  Obstacles.cpp  PongAI.cpp  (+49 more)
src/GUI/: GameField.cpp  GameField.h  Makefile  TankDrawable.cpp  TankDrawable.h  Texture.cpp  Texture.h  callbacks.cpp  callbacks.h  event.cpp  event.h  game.cpp  game.h  global.h  main.cpp  util.cpp
src/actors/: Actor.cpp  Actor.h  ActorInfo.cpp  ActorInfo.h  ProjectileActor.cpp  ProjectileActor.h
src/buildsrc/: Makefile
src/demo/: Drawable.h  GameField.cpp  GameFieldDrawable.cpp  Makefile  Menu.cpp  Obstacles.cpp  Projectile.cpp  TankDrawable.cpp  Texture.cpp  Texture.h  callbacks.cpp  callbacks.h  event.cpp  (+6 more)
(+269 files in other folders)
